--- a/Validation/appendix.Rmd
+++ b/Validation/appendix.Rmd
@@ -101,7 +101,7 @@ Parameters that vary:
   | school size $\bar{n}$   | 50                     | 75, 100           |
   | $R^2$                   | 0                      | 0.6               |
   | $\rho$                  | 0.5                    | 0.2, 0.8          |
-  | ATE (ES) true positives | (0.125, 0.125, 0.125)  | (0.125, 0. 0)     |
+  | ATE (ES) true positives | (0.125, 0.125, 0.125)  | (0.125, 0, 0)     |
   | ICC                     | 0.2                    | 0.7               |
   | $\omega$                | 0.1                    | 0.8               |
   
